--- a/css/styles.css
+++ b/css/styles.css
@@ -224,3 +224,54 @@ img {
   margin: 0;
   font-weight: 300;
 }
+/*DOWNLOAD*/
+.download {
+  padding: 180px 0;
+  background-color: #dee4e2;
+  background-image: url(../img/download.jpg);
+  background-repeat: no-repeat;
+  -webkit-background-size: cover;
+  background-size: cover;
+}
+.download-heading {
+  width: 730px;
+  margin: 0;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 52px;
+  font-weight: 700;
+  line-height: 56px;
+  color: #ffffff;
+  text-align: left;
+  text-transform: uppercase;
+}
+.red-text {
+  color: #f55150;
+}
+
+.download-text {
+  margin: 40px 0 50px;
+  font-family: 'helvetica_neueregular';
+  font-size: 24px;
+  line-height: 36px;
+  font-weight: 300;
+  color: #585858;
+}
+.download-btn {
+  margin-left: 20px;
+  padding: 0 17px;
+  display: inline-block;
+  vertical-align: baseline;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 49px;
+  background: #d9332d;
+  text-align: center;
+  color: #fff;
+  border-radius: 50px;
+  text-transform: uppercase;
+}
+.download-btn:hover {
+  background: #000;
+  transition: all 0.5s;
+}
