--- a/css/styles.css
+++ b/css/styles.css
@@ -275,3 +275,25 @@ img {
   background: #000;
   transition: all 0.5s;
 }
+/*BLOG*/
+.blog {
+  padding: 25px 0 60px;
+  text-align: center;
+}
+.blog-list-item p {
+  font-family: 'helvetica_neueregular';
+  font-size: 34px;
+  line-height: 46px;
+  font-weight: 100;
+  color: #787878;
+}
+.blog-list-item span {
+  display: block;
+  padding: 3px 0 50px;
+  text-transform: uppercase;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 26px;
+  color: #d9332d;
+}
