--- a/css/styles.css
+++ b/css/styles.css
@@ -92,7 +92,7 @@ img {
   display: block;
   padding: 0 5px;
   border-bottom: 4px solid rgba(0,0,0,0);
-  color: #fff;
+  color: #ffffff;
   text-transform: uppercase;
 }
 
@@ -111,9 +111,10 @@ img {
   position: fixed;
   width: 100%;
   padding: 15px 0px;
-  background: #000;
+  background-color: #000000;
   box-shadow: 3px 1px 0.99px 0.01px rgba(0, 0, 0, 0.05);
   transition: all 0.4s ease;
+  z-index: 2;
 }
 /* BANNER*/
 .banner {
@@ -140,7 +141,7 @@ img {
   font-weight: 700;
   font-size: 52px;
   text-align: left;
-  color: #fff;
+  color: #ffffff;
   text-transform: uppercase;
 }
 .banner-description p {
@@ -150,7 +151,7 @@ img {
   line-height: 42px;
   letter-spacing: 0.2px;
   font-weight: 400;
-  color: #fff;
+  color: #ffffff;
 }
 
 .banner-btn {
@@ -159,7 +160,7 @@ img {
   padding: 20px 34px;
   background: #282828;
   text-align: center;
-  color: #fff;
+  color: #ffffff;
   font-weight: 700;
   font-family: 'Montserrat', sans-serif;
   font-size: 18px;
@@ -169,7 +170,7 @@ img {
 }
 
 .banner-btn:hover {
-    background: #fff;
+    background-color: #ffffff;
     color: #232323;
     transition: all 0.5s;
   }
@@ -267,12 +268,12 @@ img {
   line-height: 49px;
   background: #d9332d;
   text-align: center;
-  color: #fff;
+  color: #ffffff;
   border-radius: 50px;
   text-transform: uppercase;
 }
 .download-btn:hover {
-  background: #000;
+  background-color: #000000;
   transition: all 0.5s;
 }
 /*BLOG*/
@@ -296,4 +297,95 @@ img {
   font-size: 20px;
   line-height: 26px;
   color: #d9332d;
+}
+/* FOOTER*/
+.main-footer {
+  padding: 120px 0;
+  background-color: #2e2e38;
+}
+.main-footer-logo {
+  display: block;
+  margin-bottom: 50px;
+}
+.footer-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 0 30px 0;
+  padding: 0;
+  list-style: none;
+}
+.footer-list-column {
+  width: 33%;
+  
+}
+.footer-list-heading {
+  margin: 0 0 25px 0;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+  font-size: 20px;
+  color: #ffffff;
+}
+.footer-list-text {
+  margin: 0;
+  position: relative;
+}
+.footer-list-text:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 55px;
+  height: 42px;
+  background-color: #f2654e;
+}
+.footer-list-text a{
+  display: block;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 15px;
+  padding: 0 75px 20px;
+  color: #ffffff;
+}
+.twitter-post {
+  padding-left: 65px;
+  padding-top: 8px;
+}
+.twitter-post a {
+  display: block;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 14px;
+  color: #ffffff;
+}
+.twitter-post time {
+  font-size: 11px;
+  color: #ffffff;
+}
+.twitter-post-text {
+  margin: 20px 0;
+  padding-right: 20px;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 15px;
+  color: #ffffff;
+}
+.twitter-follow-link {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 15px;
+  color: #ffffff;
+}
+.about-text {
+  margin: 0;
+  padding-right: 15px;
+  font-style: italic;
+  color: #ffffff;
+}
+.footer-copyright {
+  color: #ffffff;
+  margin: 0;
+}
+.footer-copyright a {
+  color: #ffffff;
+}
+.footer-copyright a:hover {
+  color: #e74c3c;
 }
