--- a/css/styles.css
+++ b/css/styles.css
@@ -342,10 +342,11 @@ img {
   display: block;
   font-family: 'Montserrat', sans-serif;
   font-size: 15px;
-  padding: 0 75px 20px;
+  padding: 0 75px 20px 75px;
   color: #ffffff;
 }
 .twitter-post {
+  position: relative;
   padding-left: 65px;
   padding-top: 8px;
 }
@@ -356,6 +357,17 @@ img {
   font-weight: 700;
   line-height: 14px;
   color: #ffffff;
+}
+.twitter-post a::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 48px;
+  height: 48px;
+  background-image: url(../img/s-icon.png);
+  background-repeat: no-repeat;
+
 }
 .twitter-post time {
   font-size: 11px;
@@ -388,4 +400,110 @@ img {
 }
 .footer-copyright a:hover {
   color: #e74c3c;
+}
+
+@media screen and (max-width: 767px) {
+  .container {
+    width: 320px;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  .main-header {
+    padding: 25px 0;
+  }
+  .header-fixed {
+    padding: 10px 0;
+  }
+  .banner {
+    padding-top: 105px;
+  }
+  .banner-columns {
+    flex-direction: column;
+  }
+  .banner-description {
+    width: auto;
+  }
+  
+  .banner-description h1 {
+    font-size: 30px;
+    line-height: 40px;
+  }
+  .banner-description p {
+    margin: 20px 0;
+    font-size: 20px;
+    line-height: 28px;
+  }
+  .banner-btn {
+    padding: 16px 21px;
+    margin-bottom: 20px;
+    font-size: 15px;
+  }
+
+  .features {
+    padding: 40px 0;
+  }
+  .features-heading {
+    font-size: 30px;
+  }
+  .features-text {
+    padding: 25px 0 40px;
+    font-size: 20px;
+    line-height: 28px;
+  }
+  .features-list {
+    flex-direction: column;
+  }
+  .features-list-item {
+    padding: 0;
+  }
+  .features-list-heading {
+    margin: 10px 0;
+  }
+  .features-list-text {
+    padding-bottom: 20px;
+  }
+  .download {
+    padding: 40px 0;
+    background-position: 53% 100%;
+  }
+  .download-heading {
+    width: auto;
+    font-size: 30px;
+    line-height: 40px;
+  }
+  .download-text {
+    margin: 25px 0 30px;
+    font-size: 22px;
+    line-height: 34px;
+  }
+  .download-text br {
+    display: none;
+  }
+  .download-btn {
+    margin-left: 0;
+  }
+  .blog-list-item p {
+    font-size: 20px;
+    line-height: 28px;
+    margin: 0;
+  }
+  .blog-list-item span {
+    padding: 12px 0 50px;
+  }
+  .main-footer {
+    padding: 40px 0;
+  }
+  .main-footer-logo {
+    margin-bottom: 35px;
+  }
+  .footer-list {
+    flex-direction: column;
+  }
+  .footer-list-column {
+    width: auto;
+  }
+  .footer-list-text a {
+    padding: 0 55px 20px 65px;
+  }
+
 }
