--- a/css/menu.css
+++ b/css/menu.css
@@ -1,5 +1,3 @@
-
-
 a:active,
 a:hover {
   outline: 0;
@@ -15,20 +13,6 @@ a:hover {
 /* ------------------------------------------
   RESPONSIVE NAV STYLES
 --------------------------------------------- */
-
-.nav-collapse ul {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  display: block;
-  list-style: none;
-}
-
-.nav-collapse li {
-  width: 100%;
-  display: block;
-}
-
 .js .nav-collapse {
   clip: rect(0 0 0 0);
   max-height: 0;
@@ -68,84 +52,6 @@ a:hover {
   }
 }
 
-/* ------------------------------------------
-  NAVIGATION STYLES
---------------------------------------------- */
-
-.fixed {
-  position: fixed;
-  width: 100%;
-  left: 0;
-  top: 0;
-}
-
-.nav-collapse,
-.nav-collapse * {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-.nav-collapse,
-.nav-collapse ul {
-  list-style: none;
-  width: 100%;
-  float: left;
-}
-
-@media screen and (min-width: 767px) {
-  .nav-collapse {
-    float: right;
-    width: auto;
-  }
-}
-
-.nav-collapse li {
-  float: left;
-  width: 100%;
-}
-
-@media screen and (min-width: 767px) {
-  .nav-collapse li {
-    width: auto;
-  }
-}
-
-.nav-collapse a {
- /* -webkit-tap-highlight-color: rgba(0,0,0,0);
-  border-top: 1px solid white;
-  text-decoration: none;
-  background: #f4421a;
-  padding: 0.7em 1em;
-  color: #fff;
-  width: 100%;
-  float: left;*/
-}
-
-.nav-collapse a:active,
-.nav-collapse .active a {
-border-bottom:4px solid #fff;
-}
-
-@media screen and (min-width: 767px) {
-  .nav-collapse a {
-  /*  border-left: 1px solid white;
-    padding: 1.02em 2em;
-    text-align: center;
-    border-top: 0;
-    float: left;
-    margin: 0;*/
-  }
-  
-}
-
-
-
-
-
-/* ------------------------------------------
-  NAV TOGGLE STYLES
---------------------------------------------- */
 
 @font-face {
   font-family: "responsivenav";
@@ -163,11 +69,11 @@ border-bottom:4px solid #fff;
   -moz-osx-font-smoothing: grayscale;
   text-decoration: none;
   text-indent: -300px;
-  position: relative;
+  position: absolute;
   overflow: hidden;
   width: 60px;
   height: 55px;
-  float: right;
+  right: 15px;
 }
 
 .nav-toggle:before {
@@ -188,8 +94,3 @@ border-bottom:4px solid #fff;
   font-size: 24px;
   content: "\78"; /* Close icon */
 }
-
-
-
-
-
