--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,8 @@
 @font-face {
-    font-family: 'helvetica_neueregular';
-    src: url('../fonts/helveticaneue-thin.woff2') format('woff2'),
-         url('../fonts/helveticaneue-thin.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'helvetica_neueregular';
+  src: url('../fonts/helveticaneue-thin.woff2') format('woff2'), url('../fonts/helveticaneue-thin.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
 }
 
 body {
@@ -55,6 +54,7 @@ img {
   padding-right: 15px;
 }
 
+
 /*HEADER*/
 
 .main-header {
@@ -71,12 +71,12 @@ img {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   -ms-align-items: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .header-list {
@@ -100,7 +100,7 @@ img {
   letter-spacing: -.25px;
   display: block;
   padding: 0 5px;
-  border-bottom: 4px solid rgba(0,0,0,0);
+  border-bottom: 4px solid rgba(0, 0, 0, 0);
   color: #ffffff;
   text-transform: uppercase;
 }
@@ -122,13 +122,16 @@ img {
   padding: 15px 0px;
   background-color: #000000;
   -webkit-box-shadow: 3px 1px 0.99px 0.01px rgba(0, 0, 0, 0.05);
-          box-shadow: 3px 1px 0.99px 0.01px rgba(0, 0, 0, 0.05);
+  box-shadow: 3px 1px 0.99px 0.01px rgba(0, 0, 0, 0.05);
   -webkit-transition: all 0.4s ease;
   -o-transition: all 0.4s ease;
   transition: all 0.4s ease;
   z-index: 2;
 }
+
+
 /* BANNER*/
+
 .banner {
   padding-top: 205px;
   background-image: url(../img/banner.jpg);
@@ -136,13 +139,14 @@ img {
   background-position: bottom center;
   background-size: cover;
 }
+
 .banner-columns {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
 }
 
 .banner-description {
@@ -159,6 +163,7 @@ img {
   color: #ffffff;
   text-transform: uppercase;
 }
+
 .banner-description p {
   margin: 40px 0;
   font-family: 'helvetica_neueregular';
@@ -185,12 +190,12 @@ img {
 }
 
 .banner-btn:hover {
-    background-color: #ffffff;
-    color: #232323;
-    -webkit-transition: all 0.5s;
-    -o-transition: all 0.5s;
-    transition: all 0.5s;
-  }
+  background-color: #ffffff;
+  color: #232323;
+  -webkit-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  transition: all 0.5s;
+}
 
 .banner-btn i {
   position: relative;
@@ -199,11 +204,14 @@ img {
   line-height: 10px;
 }
 
+
 /* FEATURES*/
+
 .features {
   padding: 85px 0;
   text-align: center;
 }
+
 .features-heading {
   margin: 0;
   font-weight: 700;
@@ -213,6 +221,7 @@ img {
   color: #8a8a8a;
   text-transform: uppercase;
 }
+
 .features-text {
   margin: 0;
   font-size: 22px;
@@ -220,6 +229,7 @@ img {
   padding: 40px 105px 50px;
   line-height: 32px;
 }
+
 .features-list {
   margin: 0;
   padding: 0;
@@ -228,10 +238,12 @@ img {
   display: flex;
   list-style: none;
 }
+
 .features-list-item {
   padding-left: 15px;
   padding-right: 15px;
 }
+
 .features-list-heading {
   margin: 35px 0;
   color: #1a1a1a;
@@ -240,11 +252,15 @@ img {
   font-weight: 700;
   text-transform: uppercase;
 }
+
 .features-list-text {
   margin: 0;
   font-weight: 300;
 }
+
+
 /*DOWNLOAD*/
+
 .download {
   padding: 180px 0;
   background-color: #dee4e2;
@@ -252,6 +268,7 @@ img {
   background-repeat: no-repeat;
   background-size: cover;
 }
+
 .download-heading {
   width: 730px;
   margin: 0;
@@ -263,6 +280,7 @@ img {
   text-align: left;
   text-transform: uppercase;
 }
+
 .red-text {
   color: #f55150;
 }
@@ -275,6 +293,7 @@ img {
   font-weight: 300;
   color: #585858;
 }
+
 .download-btn {
   margin-left: 20px;
   padding: 0 17px;
@@ -290,17 +309,22 @@ img {
   border-radius: 50px;
   text-transform: uppercase;
 }
+
 .download-btn:hover {
   background-color: #000000;
   -webkit-transition: all 0.5s;
   -o-transition: all 0.5s;
   transition: all 0.5s;
 }
+
+
 /*BLOG*/
+
 .blog {
   padding: 25px 0 60px;
   text-align: center;
 }
+
 .blog-list-item p {
   font-family: 'helvetica_neueregular';
   font-size: 34px;
@@ -308,6 +332,7 @@ img {
   font-weight: 100;
   color: #787878;
 }
+
 .blog-list-item span {
   display: block;
   padding: 3px 0 50px;
@@ -318,29 +343,35 @@ img {
   line-height: 26px;
   color: #d9332d;
 }
+
+
 /* FOOTER*/
+
 .main-footer {
   padding: 120px 0;
   background-color: #2e2e38;
 }
+
 .main-footer-logo {
   display: block;
   margin-bottom: 50px;
 }
+
 .footer-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
   margin: 0 0 30px 0;
   padding: 0;
   list-style: none;
 }
+
 .footer-list-column {
   width: 33%;
-  
 }
+
 .footer-list-heading {
   margin: 0 0 25px 0;
   font-family: 'Montserrat', sans-serif;
@@ -348,10 +379,12 @@ img {
   font-size: 20px;
   color: #ffffff;
 }
+
 .footer-list-text {
   margin: 0;
   position: relative;
 }
+
 .footer-list-text:before {
   content: '';
   position: absolute;
@@ -361,18 +394,21 @@ img {
   height: 42px;
   background-color: #f2654e;
 }
-.footer-list-text a{
+
+.footer-list-text a {
   display: block;
   font-family: 'Montserrat', sans-serif;
   font-size: 15px;
   padding: 0 75px 20px 75px;
   color: #ffffff;
 }
+
 .twitter-post {
   position: relative;
   padding-left: 65px;
   padding-top: 8px;
 }
+
 .twitter-post a {
   display: block;
   font-family: 'Montserrat', sans-serif;
@@ -381,6 +417,7 @@ img {
   line-height: 14px;
   color: #ffffff;
 }
+
 .twitter-post a::before {
   content: '';
   position: absolute;
@@ -390,12 +427,13 @@ img {
   height: 48px;
   background-image: url(../img/s-icon.png);
   background-repeat: no-repeat;
-
 }
+
 .twitter-post time {
   font-size: 11px;
   color: #ffffff;
 }
+
 .twitter-post-text {
   margin: 20px 0;
   padding-right: 20px;
@@ -403,24 +441,29 @@ img {
   font-size: 15px;
   color: #ffffff;
 }
+
 .twitter-follow-link {
   font-family: 'Montserrat', sans-serif;
   font-size: 15px;
   color: #ffffff;
 }
+
 .about-text {
   margin: 0;
   padding-right: 15px;
   font-style: italic;
   color: #ffffff;
 }
+
 .footer-copyright {
   color: #ffffff;
   margin: 0;
 }
+
 .footer-copyright a {
   color: #ffffff;
 }
+
 .footer-copyright a:hover {
   color: #e74c3c;
 }
@@ -437,12 +480,12 @@ img {
   .main-header-row {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
     -ms-align-items: flex-start;
     -webkit-box-align: flex-start;
-        -ms-flex-align: flex-start;
-            align-items: flex-start;
+    -ms-flex-align: flex-start;
+    align-items: flex-start;
   }
   .media-width {
     margin-top: 5px;
@@ -464,8 +507,8 @@ img {
   .header-list {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
     width: 100%;
   }
   .banner {
@@ -474,13 +517,12 @@ img {
   .banner-columns {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
   }
   .banner-description {
     width: auto;
   }
-  
   .banner-description h1 {
     font-size: 30px;
     line-height: 40px;
@@ -495,7 +537,6 @@ img {
     margin-bottom: 20px;
     font-size: 15px;
   }
-
   .features {
     padding: 40px 0;
   }
@@ -510,8 +551,8 @@ img {
   .features-list {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
   }
   .features-list-item {
     padding: 0;
@@ -559,8 +600,8 @@ img {
   .footer-list {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
   }
   .footer-list-column {
     width: auto;
